<resources>
    <string name="app_name">ForYourDay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_add_todo">Add TODO</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_add_category">Add Category</string>
    <string name="menu_add_d_day">Add D-DAY</string>
    <string name="category_delete_message">해당 카테고리의 <b>투두와 디데이</b>가\n <b>함께</b> 삭제됩니다.\n 카테고리를 삭제하시겠습니까?</string>
    <string name="delete_user_message">정말로 <b>탈퇴</b>하시나요?!</string>
</resources>