<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.cookandroid.foryourday.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_add_category"
        android:name="com.cookandroid.foryourday.ui.add_category.AddCategoryFragment"
        android:label="@string/menu_add_category"
        tools:layout="@layout/fragment_add_category" />

    <fragment
        android:id="@+id/nav_add_todo"
        android:name="com.cookandroid.foryourday.ui.add_todo.AddTodoFragment"
        android:label="@string/menu_add_todo"
        tools:layout="@layout/fragment_add_todo" />

    <fragment
        android:id="@+id/nav_add_d_day"
        android:name="com.cookandroid.foryourday.ui.add_d_day.AddDDayFragment"
        android:label="@string/menu_add_d_day"
        tools:layout="@layout/fragment_add_d_day" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.cookandroid.foryourday.ui.setting.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>